--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ dependencies {
 
     testCompileOnly 'org.projectlombok:lombok:1.18.34'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'  // Für commons-lang3
+    implementation 'commons-io:commons-io:2.11.0'             // Für commons-io
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-math3
+    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.0'
+
 }
 
 test {
